Add run instructions, fix overflow in file list

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,8 @@ button[disabled] {
   color: inherit !important;
   background: inherit !important;
 }
+
+.verifier-file-list {
+  list-style-position: inside;
+  word-break: break-all;
+}
